--- a/Assets/Plugins/lame.bundle/Contents/Info.plist
+++ b/Assets/Plugins/lame.bundle/Contents/Info.plist
@@ -3,13 +3,15 @@
 <plist version="1.0">
 <dict>
 	<key>BuildMachineOSBuild</key>
-	<string>17C88</string>
+	<string>24F74</string>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>English</string>
+	<string>en</string>
+	<key>CFBundleDisplayName</key>
+	<string>lame</string>
 	<key>CFBundleExecutable</key>
 	<string>lame</string>
 	<key>CFBundleIdentifier</key>
-	<string>com.sgkj.lame</string>
+	<string>com.wujian.lame</string>
 	<key>CFBundleInfoDictionaryVersion</key>
 	<string>6.0</string>
 	<key>CFBundleName</key>
@@ -27,18 +29,20 @@
 	<key>DTCompiler</key>
 	<string>com.apple.compilers.llvm.clang.1_0</string>
 	<key>DTPlatformBuild</key>
-	<string>9C40b</string>
+	<string>24E241</string>
+	<key>DTPlatformName</key>
+	<string>macosx</string>
 	<key>DTPlatformVersion</key>
-	<string>GM</string>
+	<string>15.4</string>
 	<key>DTSDKBuild</key>
-	<string>17C76</string>
+	<string>24E241</string>
 	<key>DTSDKName</key>
-	<string>macosx10.13</string>
+	<string>macosx15.4</string>
 	<key>DTXcode</key>
-	<string>0920</string>
+	<string>1630</string>
 	<key>DTXcodeBuild</key>
-	<string>9C40b</string>
-	<key>NSHumanReadableCopyright</key>
-	<string>Copyright © 2018年 sbooth.org. All rights reserved.</string>
+	<string>16E140</string>
+	<key>LSMinimumSystemVersion</key>
+	<string>11.5</string>
 </dict>
 </plist>
